<resources>
    <string name="main_url">http://70.12.109.173:9090/NexQuick/</string>

    <string name="app_name">NexQuick Pro</string>
    <string name="hintId">전화번호를 입력하세요</string>
    <string name="hintPassword">비밀번호를 입력하세요</string>
    <string name="autoLogin">자동로그인</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="newOrder">새로운 주문</string>
    <string name="orderList">주문내역확인</string>
    <string name="updateUserInfo">회원정보수정</string>
    <string name="chatting">고객센터</string>
    <string name="title_activity_new_order">NewOrderActivity</string>
    <string name="tab_text_1">1단계</string>
    <string name="tab_text_2">2단계</string>
    <string name="tab_text_3">3단계</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="getOffWork">퇴근하기</string>
    <string name="deviceManager">장치관리</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_signup">회원가입</string>

    <!-- Strings related to login -->
    <string name="prompt_id">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_password_re">비밀번호 확인</string>
    <string name="action_sign_in">회원가입</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">이미 등록된 전화번호입니다.</string>
    <string name="error_valid_phone">등록 가능한 전화번호입니다.</string>
    <string name="error_invalid_password">4자리 이상 입력해주세요.</string>
    <string name="error_valid_password">사용 가능한 비밀번호입니다.</string>
    <string name="error_incorrect_password">비밀번호가 다릅니다.</string>
    <string name="error_correct_password">비밀번호가 일치합니다.</string>
    <string name="error_field_required">반드시 입력해야 합니다.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">이름</string>
    <string name="prompt_user_phone">전화번호</string>
    <string name="detail">상세보기</string>
    <string name="prompt_user_account">정산 계좌번호</string>
    <string name="prompt_lisence">면허증 업로드</string>
    <string name="prompt_picture">사진 업로드</string>
    <string name="prompt_bank">은행</string>
    <string name="quick_detail_title">퀵 상세보기</string>
    <string name="quick_detail_contents">퀵 상세보기</string>
    <string name="blank_string">이름을 시와 이름자 별 나는 까닭입니다. 그리고 멀리 책상을 봅니다. 무덤 이름을 그리워 불러 별 없이 덮어 아침이 까닭입니다. 별 릴케 경, 까닭입니다. 언덕 파란 피어나듯이 다 너무나 딴은 지나고 버리었습니다. 멀리 이제 위에 자랑처럼 내린 라이너 남은 계십니다. 언덕 묻힌 내 어머니, 계집애들의 무엇인지 부끄러운 릴케 있습니다. 어머니 이제 피어나듯이 하나에 경, 부끄러운 그리워 시와 어머님, 거외다. 가을로 묻힌 언덕 이국 어머니, 불러 나의 거외다.</string>
    <string name="quick_blank_string">급/15시30분착/역삼동/청룡동/소박스1/의류</string>
    <string name="tapconfirm_title">"TAP &#38; CONFIRM"</string>
    <string name="tapconfirm_desc">"퀵 인수/인도 확인입니다.퀵프로님의 폰 뒷면을 고객님의 폰 뒷면과 탭해주세요. 탭이 되지 않는 경우 사인인증 버튼을 눌러주세요."</string>

</resources>
