<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".LoginActivity">


    <Space
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.2"/>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"/>


        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/whitelogo" />

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintId"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:inputType="textPassword" />


        <Switch
            android:id="@+id/autoSwitch"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:track="@drawable/switch_track_selector"
            android:thumb="@drawable/switch_thumb_selector"
            android:text="자동로그인  "
            android:textOn="On"
            android:textOff="Off"
            />


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_style_fill"
            android:text="@string/login"
            android:textStyle="bold" />


        <Button
            android:id="@+id/SignBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/signup"
            android:background="@drawable/button_style"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"/>

    </LinearLayout>


    <Space
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.2"/>

</LinearLayout>